--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --configuration production --base-href /portfolio/ && npx angular-cli-ghpages --dir=dist/portfolio-app/browser"
+    "deploy": "ng build --configuration production --base-href='https://vlnchieff.github.io/portfolio1/' && npx angular-cli-ghpages --dir=dist/portfolio1/browser --repo=https://github.com/vlnchieff/portfolio1.git --no-silent"
   },
   "prettier": {
     "printWidth": 100,
